Fixed issue where wavefunction was not visible on load

--- a/style.css
+++ b/style.css
@@ -42,3 +42,12 @@ canvas {
     width: 100%;
     height: 500px;
 }
+
+#waveCanvas {
+    display: block;
+    visibility: visible;
+    width: 800px;
+    height: 400px;
+    background-color: black;
+    border: 1px solid white;
+}
